# computers

./: .gitignore  Cargo.toml  admnmodule.md  bannermodule.md  brandmodule.md  categorymodule.md  productmodule.md  usermodue.md
src/: app.rs  lib.rs  main.rs
src/environment/: config.rs  database.rs  mod.rs
src/middleware/: admin.rs  auth.rs  mod.rs
src/module/: mod.rs
src/module/admin/: controller.rs  crud.rs  interface.rs  mod.rs  model.rs  route.rs  schema.rs
src/module/banner/: controller.rs  crud.rs  interface.rs  mod.rs  model.rs  route.rs  schema.rs
src/module/brand/: controller.rs  crud.rs  interface.rs  mod.rs  model.rs  route.rs  schema.rs
src/module/category/: controller.rs  crud.rs  interface.rs  model.rs  route.rs  schema.rs
src/module/product/: controller.rs  crud.rs  interface.rs  mod.rs  model.rs  route.rs  schema.rs
src/module/user/: controller.rs  crud.rs  interface.rs  mod.rs  model.rs  route.rs  schema.rs
src/service/: email_service.rs  email_templates.rs  google_oauth_service.rs  jwt_service.rs  mod.rs
src/service/upload/: config.rs  mod.rs
src/service/upload/banner/: mod.rs  service.rs
src/service/upload/brand/: mod.rs  service.rs
tests/: email_test.rs
